@@ -1,3 +1,7 @@
+2020-10-18 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Add example function for importing images in base64 format, resolves #145
+
 2020-10-17 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Ship own version of DataTables, resolves #144
